--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,13 +7,16 @@ import Markdown from '../components/Markdown.astro';
 
 <Layout title="Un bon chien respecte les chats">
     <div style="max-width: 800px; margin: 0 auto; padding: 2rem; line-height: 1.6; font-family: Georgia, serif;">
+
+        <p style="margin-bottom: 1rem;">Lloc temporal, en construcció, el lloc principal serà en català!!</p>
+
         <div style="border: 2px solid #333; padding: 1.5rem; margin-bottom: 2rem; background-color: #f9f9f9; border-radius: 8px;">
             <p style="font-weight: bold; margin-bottom: 1rem; color: #333;">437. Il est interdit de fixer une enseigne à un arbre, un balcon, une galerie, un perron, une terrasse ou à un escalier.</p>
             
             <p style="font-style: italic; margin-bottom: 0; color: #333;">Arrondissement du Plateau-Mont-Royal, Règlement 01-277, art. 437</p>
         </div>
         
-        <p style="margin-bottom: 1rem;">Nous demandons que Yannick Sarrazin, son équipe et ses clients respectent la réglementation en vigueur. De plus, nous demandons qu'il laisse en place nos chats. Ils veulent simplement jouer avec votre lévrier.</p>
+        <p style="margin-bottom: 1rem;">Nous demandons que Yanick Sarrazin, son équipe et ses clients respectent la réglementation en vigueur. De plus, nous demandons qu'il laisse en place nos chats. Ils veulent simplement jouer avec votre lévrier.</p>
         
         <p>De plus, nous vous demandons de bien vouloir reconsidérer vos choix de vie. La gentrification améliore-t-elle vraiment le Plateau ? Est-il équitable de vous enrichir aux dépens de personnes moins fortunées ?</p>
     </div>
