--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,11 +30,15 @@ import Markdown from '../components/Markdown.astro';
         </p>
 
         <p style="margin-bottom: 1rem;">
-            Nous vous suggérons de bien vouloir reconsidérer vos choix et votre mode de vie.
+            Nous vous suggérons également de bien vouloir reconsidérer vos choix et votre mode de vie.
             La gentrification améliore-t-elle vraiment le Plateau ?
             Est-il équitable de vous enrichir aux dépens des personnes moins fortunées ?
             Il est – bien sûr – acceptable d'acheter et de vendre des immeubles.
             Mais cherchez-vous à vous enrichir par cet acte, ou simplement à couvrir vos coûts de déménagement et de déplacement ?
+        </p>
+
+        <p style="margin-bottom: 1rem; color: #333;">
+            <a href="infos@yesarrazin.defoc.cat">infos@yesarrazin.defoc.cat</a>
         </p>
     </div>
 </Layout>
